--- a/app/views/layouts/exercise_inputs/forms/_playground_form.html.erb
+++ b/app/views/layouts/exercise_inputs/forms/_playground_form.html.erb
@@ -10,7 +10,7 @@
 <% end %>
 
 <div class="tab-content">
-  <div role="tabpanel" class="tab-pane mu-input-panel in active fade" id="console">
+  <div role="tabpanel" class="tab-pane mu-input-panel show active fade" id="console">
     <div class="console">
     </div>
     <div class="mu-overlapped">
