--- a/app/views/exercises/_read_only.html.erb
+++ b/app/views/exercises/_read_only.html.erb
@@ -49,20 +49,19 @@
 
     <ul class="nav nav-tabs discussion-tabs" role="tablist">
       <% if @discussion.has_submission? %>
-        <li role="presentation" class="active">
-          <a data-bs-target="#solution" aria-controls="solution" role="tab" data-bs-toggle="tab" class="editor-tab">
+        <li role="presentation">
+          <a class="editor-tab nav-link active" data-bs-target="#solution" aria-controls="solution" role="tab" data-bs-toggle="tab">
             <%= t :solution %>
           </a>
         </li>
         <li role="presentation">
-          <a data-bs-target="#results" aria-controls="results" role="tab" data-bs-toggle="tab" class="editor-tab">
+          <a class="editor-tab nav-link" data-bs-target="#results" aria-controls="results" role="tab" data-bs-toggle="tab">
             <%= t :results %>
           </a>
         </li>
       <% end %>
-
-      <li role="presentation" <%= "class=active" unless @discussion.has_submission? %>>
-        <a data-bs-target="#content" aria-controls="content" role="tab" data-bs-toggle="tab" class="editor-tab">
+      <li role="presentation">
+        <a class="editor-tab nav-link <%= "active" unless @discussion.has_submission? %>" data-bs-target="#content" aria-controls="content" role="tab" data-bs-toggle="tab">
           <%= t :description %>
         </a>
       </li>
