Use fa_icon helper on editor tab titles
This gives some pixels of padding between the icon and the text,
which we lost when we upgraded to FontAwesome 5.

--- a/app/views/layouts/exercise_inputs/editors/_multiple_files.html.erb
+++ b/app/views/layouts/exercise_inputs/editors/_multiple_files.html.erb
@@ -9,7 +9,7 @@
           </li>
         <% end %>
       </ul>
-      <i class="add-file-button fas fa-plus"></i>
+      <%= fa_icon :plus, class: 'add-file-button' %>
     </span>
 
     <%= multifile_hidden_inputs %>
