Make restart overlapped buttons work correctly with consoles and multiple files

--- a/app/views/layouts/exercise_inputs/editors/_code.html.erb
+++ b/app/views/layouts/exercise_inputs/editors/_code.html.erb
@@ -8,6 +8,6 @@
   <div class="mu-overlapped">
     <%= expand_icon %>
     <%= format_icon %>
-    <%= restart_icon %>
+    <%= restart_icon 'editor', {'data-confirm': t(:confirm_reset)} %>
   </div>
 </div>
