--- a/app/views/layouts/exercise_inputs/forms/_playground_form.html.erb
+++ b/app/views/layouts/exercise_inputs/forms/_playground_form.html.erb
@@ -14,7 +14,7 @@
     <div class="console">
     </div>
     <div class="mu-overlapped">
-      <a class="console-reset submission-reset"><%= restart_icon %></a>
+      <%= restart_icon %>
     </div>
   </div>
   <div role="tabpanel" class="tab-pane mu-input-panel fade mu-elipsis" id="visible-extra">
