--- a/app/views/exercises/_read_only.html.erb
+++ b/app/views/exercises/_read_only.html.erb
@@ -115,7 +115,7 @@
           <div class="console">
           </div>
           <div class="mu-overlapped">
-            <a class="console-reset submission-reset"><%= restart_icon %></a>
+            <%= restart_icon %>
           </div>
         </div>
       </div>
