--- a/app/views/layouts/exercise_inputs/forms/_problem_form.html.erb
+++ b/app/views/layouts/exercise_inputs/forms/_problem_form.html.erb
@@ -45,7 +45,7 @@
       <div class="console">
       </div>
       <div class="mu-overlapped">
-        <a class="console-reset submission-reset"><%= restart_icon %></a>
+        <%= restart_icon %>
       </div>
     </div>
     <div class="field checkbox complementary complementary-checkbox mu-editor">
