--- a/app/assets/stylesheets/mumuki_laboratory/application/modules/_discussion.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/modules/_discussion.scss
@@ -16,6 +16,14 @@ $moderator-badge-color: #dd9900;
   }
 }
 
+.mu-discussion-accordion button {
+  color: $primary;
+
+  &:not(.collapsed) {
+    background-color: $mu-color-highlight-background;
+  }
+}
+
 .discussions-list {
   margin: 30px 0;
   .discussion {
@@ -229,10 +237,6 @@ $moderator-badge-color: #dd9900;
   }
 }
 
-.discussion-tabs {
-  margin-top: 20px;
-}
-
 .discussion-info {
   font-size: 18px;
 }
@@ -270,16 +274,6 @@ $moderator-badge-color: #dd9900;
   }
   &:focus {
     border-color: white;
-  }
-}
-
-summary.discussion-summary {
-  display: list-item;
-  font-size: 29px;
-  outline: 0;
-  cursor: pointer;
-  .discussion-exercise-title {
-    display: inline;
   }
 }
 
@@ -431,10 +425,6 @@ $statuses: (
       background-color: darken($background-color, 3%);
     }
   }
-}
-
-.no-margin {
-  margin: 0 !important;
 }
 
 .discussion-requires-attention {
