--- a/app/views/exercises/_read_only.html.erb
+++ b/app/views/exercises/_read_only.html.erb
@@ -31,6 +31,14 @@
               <span class="d-none d-sm-inline"><%= discussion_info(@discussion) unless @discussion.new_record? %></span>
             </span>
           </div>
+          <% if @discussion.last_moderator_access_visible_for?(current_user) %>
+            <h5 class="my-2 me-3">
+              <span class="badge bg-primary text-wrap">
+                <%= t :last_seen, name: @discussion.last_moderator_access_by.full_name %>
+                <%= t :time_since, time: time_ago_in_words(@discussion.last_moderator_access_at) %>
+              </span>
+            </h5>
+          <% end %>
         </div>
       </button>
     </h2>
