Give proper styles to checkboxes
Add form-check to parent divs, form-check-input for checkboxes
and form-check-label (if needed) to labels. For read-only editor,
add mu-form (even though it's not a form) for styling. Also, I'm
keeping the default checkbox color (primary/blue) instead of
forcing complementary (pink).

I sense it'll be an unpopular decision I'll have to revert :-)

--- a/app/views/invitations/_invitation_form.html.erb
+++ b/app/views/invitations/_invitation_form.html.erb
@@ -13,8 +13,9 @@
     <div>
       <h3><%= t :terms_and_conditions %></h3>
       <pre class="terms-of-service"><%= simple_format @organization.terms_of_service %></pre>
-      <div>
-        <input id="accept_terms" type="checkbox"> <span><%= t :accept_terms %></span>
+      <div class="form-check mb-3">
+        <input id="accept_terms" type="checkbox" class="form-check-input">
+        <label class="form-check-label"><%= t :accept_terms %></label>
       </div>
     </div>
   <% end %>
