--- a/app/views/layouts/_main.html.erb
+++ b/app/views/layouts/_main.html.erb
@@ -31,25 +31,9 @@
 <div class="<%= exercise_container_type %><%= @kids ? '-fluid' : '' %>" id="wrap">
   <div class="toast-container bottom-0 start-0 p-3">
     <% if notice %>
-      <div class="toast mu-toast-success" role="alert">
-        <div class="toast-body">
-          <div class="d-flex align-items-center">
-            <%= fa_icon 'check-circle', class: 'fa-lg me-3' %>
-            <span class="flex-grow-1 text-break"><%= notice.html_safe %></span>
-            <button type="button" class="btn-close btn-close-white mx-2 flex-shrink-0" data-bs-dismiss="toast" aria-label="Close"></button>
-          </div>
-        </div>
-      </div>
+      <%= toast_notice(notice) %>
     <% elsif alert %>
-      <div class="toast mu-toast-error" role="alert">
-        <div class="toast-body">
-          <div class="d-flex align-items-center">
-            <%= fa_icon 'times-circle', class: 'fa-lg me-3' %>
-            <span class="flex-grow-1 text-break"><%= alert.html_safe %></span>
-            <button type="button" class="btn-close btn-close-white mx-2 flex-shrink-0" data-bs-dismiss="toast" aria-label="Close"></button>
-          </div>
-        </div>
-      </div>
+      <%= toast_alert(alert) %>
     <% end %>
   </div>
 
