Add new info flash type

--- a/app/views/layouts/_main.html.erb
+++ b/app/views/layouts/_main.html.erb
@@ -34,6 +34,8 @@
       <%= toast_notice(notice) %>
     <% elsif alert %>
       <%= toast_alert(alert) %>
+    <% elsif info %>
+      <%= toast_info(info) %>
     <% end %>
   </div>
 
