--- a/app/views/exam_registrations/show.html.erb
+++ b/app/views/exam_registrations/show.html.erb
@@ -24,9 +24,10 @@
       <%= f.hidden_field :exam_registration_id, value: @registration.id %>
       <%= f.label :exam_id, t(:exam_registration_choose_exam) %>
       <% @registration.exams.each do |exam| %>
-        <div class="field radio complementary complementary-radio">
-          <%= f.radio_button(:exam_id, exam.id, id: exam.id, required: true, checked: @authorization_request.exam_id == exam.id) %>
-          <%= label_tag exam.id, l(exam.start_time, format: :long) %>
+        <div class="form-check">
+          <%= f.radio_button(:exam_id, exam.id, id: exam.id, required: true, class: 'form-check-input mu-read-only-input',
+                             checked: @authorization_request.exam_id == exam.id) %>
+          <%= label_tag exam.id, l(exam.start_time, format: :long), class: 'form-check-label' %>
         </div>
       <% end %>
       <button class="btn btn-complementary"> <%= t :save %> </button>
