Extend Bootstrap modal utilities on kids modals
Instead of manually setting the viewport size and calculating the
modal size - which was actually causing trouble for screens less
wide than 800px - we can extend some utilities that already handle
these scenarios. Now the modal centering and sizing work on every
screen size without writing extra positioning/sizing styles.

--- a/app/assets/stylesheets/mumuki_laboratory/application/modules/_kids_results.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/modules/_kids_results.scss
@@ -58,29 +58,16 @@ $capital-animation-width: 135px;
   }
 }
 
-.mu-kids-modal-border {
-
+.mu-kids-modal {
   .modal-dialog {
+    @extend .modal-lg;
+    @extend .modal-dialog-centered;
 
-    height: 100vh;
-    width: 100vw;
-    margin: 0;
+    .modal-header {
+      @extend .justify-content-center;
+    }
 
     .modal-content {
-
-      position: absolute;
-
-      $width-lg: 800px;
-
-      width: $width-lg;
-
-      top: 60px;
-      left: calc(50% - #{$width-lg} / 2);
-
-      @media (max-width: $width-lg + 30px) {
-        width: calc(100vw - 30px);
-      }
-
       $border-width: 16px;
       border-width: $border-width;
       border-style: solid;
