--- a/app/views/layouts/modals/_kindergarten_results_aborted.html.erb
+++ b/app/views/layouts/modals/_kindergarten_results_aborted.html.erb
@@ -1,4 +1,4 @@
-<div class="modal fade mu-kids-results-aborted mu-kids-modal-border" id="kids-results-aborted" tabindex="-1" role="dialog" aria-hidden="true">
+<div class="modal fade mu-kids-results-aborted mu-kids-modal" id="kids-results-aborted" tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content broken kindergarten">
       <button type="button" class="mu-kids-modal-button mu-close" data-bs-dismiss="modal" aria-label="Close" data-waiting="">
