--- a/app/views/exercise_solutions/_kids_results_button.html.erb
+++ b/app/views/exercise_solutions/_kids_results_button.html.erb
@@ -1,10 +1,10 @@
-<div class="row">
+<div class="row w-100">
   <div class="col-md-12">
     <div class="actions">
       <% if assignment.solved? %>
         <%= next_exercise_button(@exercise) || close_modal_button %>
       <% else %>
-        <button class="btn btn-complementary w-100 submission-control" id="kids-btn-retry" data-bs-dismiss="modal" aria-label="<%= t :retry_exercise %>"> <%= t :retry_exercise %> </button>
+        <button class="btn btn-complementary submission-control" id="kids-btn-retry" data-bs-dismiss="modal" aria-label="<%= t :retry_exercise %>"> <%= t :retry_exercise %> </button>
       <% end %>
     </div>
   </div>
