--- a/app/views/layouts/modals/_kids_results_aborted.html.erb
+++ b/app/views/layouts/modals/_kids_results_aborted.html.erb
@@ -1,4 +1,4 @@
-<div class="modal fade mu-kids-results mu-kids-results-aborted" id="kids-results-aborted" tabindex="-1" role="dialog" aria-hidden="true">
+<div class="modal fade mu-kids-results mu-kids-results-aborted mu-kids-modal" id="kids-results-aborted" tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
