--- a/app/views/layouts/modals/_kindergarten_context.html.erb
+++ b/app/views/layouts/modals/_kindergarten_context.html.erb
@@ -1,4 +1,4 @@
-<div class="modal fade mu-kids-modal-border" id="mu-kids-context" tabindex="-1" role="dialog" aria-hidden="true">
+<div class="modal fade mu-kids-modal" id="mu-kids-context" tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content kindergarten">
       <button type="button" class="mu-kids-modal-button mu-close" data-waiting="" data-bs-dismiss="modal" aria-label="Close">
