--- a/app/assets/stylesheets/mumuki_laboratory/application/modules/_kids_results.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/modules/_kids_results.scss
@@ -133,18 +133,27 @@ $capital-animation-width: 135px;
           }
         }
         .mu-kids-character.kindergarten {
-          @include full-size-character;
+          img {
+            width: 100%;
+            height: 100%;
+            object-position: center;
+            object-fit: contain;
+          }
         }
 
         .submission-results.kindergarten {
           width: 100%;
-          height: 100%;
           .mu-kids-callout-#{$class},
           p {
             display: none;
           }
           .mu-kids-default-#{$class} {
-            @include full-size-character;
+            img {
+              flex-grow: 1;
+              margin: 0;
+              width: 100%;
+              object-fit: contain;
+            }
           }
         }
       }
