--- a/app/views/layouts/_submission_result_error.html.erb
+++ b/app/views/layouts/_submission_result_error.html.erb
@@ -1,4 +1,4 @@
-<div class="bs-callout bs-callout-broken submission-result-error" style="display: none;">
+<div class="bs-callout bs-callout-broken submission-result-error d-none">
   <h4>
     <strong><%= t :errored %></strong>
   </h4>
