--- a/app/views/layouts/exercise_inputs/editors/_text.html.erb
+++ b/app/views/layouts/exercise_inputs/editors/_text.html.erb
@@ -1,7 +1,6 @@
 <div class="mu-editor-one-liner">
   <%= form.editor :content, 'dynamic',
-                  class: 'form-control editor',
+                  class: 'form-control editor d-none',
                   value: @current_content,
-                  style: 'display: none',
                   data: {lines: 1} %>
 </div>
