--- a/app/views/layouts/exercise_inputs/forms/_kids_form.html.erb
+++ b/app/views/layouts/exercise_inputs/forms/_kids_form.html.erb
@@ -8,5 +8,5 @@
   </div>
   <div class="actions mu-kids-reset-button"></div>
   <img class="mu-kids-compass-rose" src="/compass_rose.svg">
-  <div class="mu-kids-overlay" style="display: none"></div>
+  <div class="mu-kids-overlay d-none"></div>
 <% end %>
