--- a/app/views/layouts/exercise_inputs/editors/_multiple_choice.html.erb
+++ b/app/views/layouts/exercise_inputs/editors/_multiple_choice.html.erb
@@ -1,5 +1,5 @@
 <div>
-  <input id="solution_content" type="text" name="solution[content]" style="display: none">
+  <input class="d-none" id="solution_content" type="text" name="solution[content]">
   <% @exercise.pretty_choices.each do |choice| %>
     <div class="form-check">
       <%= check_box_tag(choice.id, '1', checked?(choice, @current_content), class: 'solution-choice form-check-input', 'data-index' => choice.index) %>
