--- a/app/views/layouts/modals/_new_message.html.erb
+++ b/app/views/layouts/modals/_new_message.html.erb
@@ -1,4 +1,4 @@
-<div class="modal new-message-modal" tabindex="-1" role="dialog" aria-hidden="true" style="display:block">
+<div class="modal new-message-modal d-block" tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-dialog">
     <%= form_for(Message.new, html: {role: 'form'}) do |f| %>
         <div class="modal-content">
