Prevent overflow of long breadcrumbs in navbar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,7 +35,7 @@
             <%= login_button %>
           <% end %>
         </div>
-        <div class="collapse navbar-collapse" id="muNavbar">
+        <div class="collapse navbar-collapse mu-navbar-breadcrumb-container" id="muNavbar">
           <div class="mu-navbar-breadcrumb order-lg-1">
             <ul class="navbar-nav mu-breadcrumb-list">
               <%= yield :breadcrumbs %>
