--- a/app/views/layouts/exercise_inputs/layouts/_input_right.html.erb
+++ b/app/views/layouts/exercise_inputs/layouts/_input_right.html.erb
@@ -1,8 +1,8 @@
 <div class="row">
-  <div class="col-md-6 exercise-assignment">
+  <div class="col-lg-6 exercise-assignment">
     <%= yield :assignment %>
   </div>
-  <div class="mu-exercise-content col-md-6 ace-editor-col">
+  <div class="mu-exercise-content col-lg-6 ace-editor-col">
     <%= yield :exercise_content %>
   </div>
 </div>
