Update multiple files nav and tabs to work with Bootstrap 5
I found a (pre-existing) bug where the main file can be deleted
(it shouldn't show the X icon) if it's not called index.html,
because at some point in multiple-files.js it sets mainFile as
index.html. I couldn't really find where or understand why.
Maybe I'm getting all of this wrong.

In any case, given the limited adoption of multiple files exercises,
the fact that the JS code has been sitting unchanged for almost two
years, and that all our multiple files exercises do have index.html
as their main file, eliminating this bug, I left it as-is.

--- a/app/views/layouts/exercise_inputs/editors/_multiple_files.html.erb
+++ b/app/views/layouts/exercise_inputs/editors/_multiple_files.html.erb
@@ -1,11 +1,11 @@
 <div class="editor-code">
-
   <div class="editor-files">
     <span class="files-tabs">
-      <ul class="nav nav-tabs">
+      <ul class="nav nav-tabs" role="tablist">
         <% @files.each_with_index do |file, index| %>
-          <li role="presentation" class="file-tab" data-bs-target="#editor-file-<%= index %>" tabindex='0' data-bs-toggle='tab'>
-            <a class="file-name nav-link <%= 'active' if index == 0 %>" href="#"><%= file.name %></a> <i class="delete-file-button fas fa-times"></i>
+          <li class="nav-item file-tab" role="presentation">
+            <a class="file-name nav-link <%= 'active' if index == 0 %>" href="#" role="tab" data-bs-target="#editor-file-<%= index %>"
+               tabindex='0' data-bs-toggle='tab'><%= file.name %></a> <i class="delete-file-button fas fa-times"></i>
           </li>
         <% end %>
       </ul>
