Properly center timer

--- a/app/views/layouts/_timer.html.erb
+++ b/app/views/layouts/_timer.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-md-3 offset-md-5">
+  <div class="text-center">
     <i class="timer text-center far fa-clock"></i>
     <i class="timer timer-text text-center"><%= t :time_left %></i>
     <i id="timer" class="timer timer-text text-center"></i>
