--- a/app/views/users/activity.html.erb
+++ b/app/views/users/activity.html.erb
@@ -25,9 +25,10 @@
       </div>
       <div class="col-lg-4 mu-tab-body">
         <div class="nav nav-pills flex-column">
-          <%= link_to t(:total), activity_user_path, class: mark_period_if_active(nil) %>
+          <%= link_to t(:total), activity_user_path, class: "mu-user-activity-week-selector #{mark_period_if_active(nil)}" %>
           <% activity_selector_week_range_for.each do |(week_start, week_end)| %>
-            <%= link_to t(:week_of, date: l(week_start)), activity_user_path(date_from: week_start, date_to: week_end), class: mark_period_if_active(week_start) %>
+            <%= link_to t(:week_of, date: l(week_start)), activity_user_path(date_from: week_start, date_to: week_end),
+                        class: "mu-user-activity-week-selector #{mark_period_if_active(week_start)}" %>
           <% end %>
         </div>
       </div>
