Show why a message was deleted in place of the original message

--- a/app/views/discussions/_message.html.erb
+++ b/app/views/discussions/_message.html.erb
@@ -39,7 +39,11 @@
     </div>
     <div class="discussion-message-bubble-content">
       <div class="discussion-message-content">
-        <%= message.content_html %>
+        <% if message.deleted? %>
+          <em><%= message_deleted_text message %></em>
+        <% else %>
+          <%= message.content_html %>
+        <% end %>
       </div>
     </div>
   </div>
