--- a/app/views/discussions/_message.html.erb
+++ b/app/views/discussions/_message.html.erb
@@ -42,6 +42,9 @@
         <% if message.deleted? %>
           <em><%= message_deleted_text message %></em>
           <% if current_user&.moderator_here? %>
+            <hr>
+            <%= t :deleted_by, deleter: message.deleted_by.name %>
+            <%= t(:time_since, time: time_ago_in_words(message.deleted_at)) %>.
             <a href='<%= "#deletedMessage#{message.id}" %>' data-toggle="collapse">
               <%= t :show_message %>
             </a>
