Fix styles for discussion messages actions

--- a/app/assets/stylesheets/mumuki_laboratory/application/modules/_discussion.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/modules/_discussion.scss
@@ -325,7 +325,7 @@ $moderator-badge-color: #dd9900;
       }
       .actions {
         float: right;
-        a {
+        > a, .dropdown {
           margin-left: 20px;
           cursor: pointer;
         }
