--- a/app/views/exam_registrations/show.html.erb
+++ b/app/views/exam_registrations/show.html.erb
@@ -11,7 +11,7 @@
 </div>
 
 <div class="row">
-  <div class="mu-inline-block-left">
+  <div class="col-lg-12">
     <div class="bs-callout bs-callout-info">
       <h4 class="text-info">
         <strong><%= fa_icon :info_circle %> <%= t :important_info %></strong>
