--- a/app/views/layouts/_user_menu.html.erb
+++ b/app/views/layouts/_user_menu.html.erb
@@ -9,6 +9,8 @@
         <%= discussions_user_menu_link %>
         <%= user_menu_divider %>
         <%= activity_user_menu_link %>
+        <%= certificates_user_menu_link %>
+        <%= exam_authorizations_user_menu_link %>
       </div>
     </div>
     <div class="mu-user-menu-divider vertical d-none d-md-block"></div>
