--- a/app/views/exam_authorization_requests/_into_callout.html.erb
+++ b/app/views/exam_authorization_requests/_into_callout.html.erb
@@ -1,5 +1,5 @@
 <div class="bs-callout bs-callout-<%= @authorization_request.icon[:type] %>">
-  <h4 class="text-info">
+  <h4 class="text-<%= @authorization_request.icon[:type] %>">
     <strong><%= fa_icon @authorization_request.icon[:class] %> <%= t :important_info %></strong>
   </h4>
   <p>
