--- a/app/views/users/exam_authorizations.html.erb
+++ b/app/views/users/exam_authorizations.html.erb
@@ -2,27 +2,29 @@
   <%= breadcrumbs_for_my_account %>
 <% end %>
 
-<%= render partial: 'layouts/user_menu' %>
+<div class="row">
+  <%= render partial: 'layouts/user_menu' %>
 
-<div class="col-md-9 mu-tab-body">
-  <div class="mu-user-header">
-    <h1><%= t(:exam_registrations) %></h1>
-  </div>
-  <% if @exam_authorization_requests.empty? %>
-    <div class="mu-tab-body">
-      <%= t :exams_will_be_here %>
+  <div class="col-md-9 mu-tab-body">
+    <div class="mu-user-header">
+      <h1><%= t(:exam_registrations) %></h1>
     </div>
-  <% else %>
-    <div class="col-md-12">
-      <div class="mu-list-group">
-        <% @exam_authorization_requests.each do |it| %>
+    <% if @exam_authorization_requests.empty? %>
+      <div class="mu-tab-body">
+        <%= t :exams_will_be_here %>
+      </div>
+    <% else %>
+      <div class="col-md-12">
+        <div class="mu-list-group">
+          <% @exam_authorization_requests.each do |it| %>
             <a class="mu-list-group-item" href="<%= exam_authorization_request_path it %>" target="_blank">
               <span class="fa fa-fw fa-<%= it.icon[:class] %> text-<%= it.icon[:type] %>" title="<%= t(it.status).humanize %>"></span>
               <span class="mu-divider-vertical"></span>
               <span><strong><%= it.exam_registration.description %></strong> - <small><%= l(it.exam_registration.start_time, format: :long) %></small></span>
             </a>
-        <% end %>
+          <% end %>
+        </div>
       </div>
-    </div>
-  <% end %>
+    <% end %>
+  </div>
 </div>
