Remove extra padding on new discussion message
Caused by padding added by Bootstrap 5 .row class

--- a/app/assets/stylesheets/mumuki_laboratory/application/modules/_discussion.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/modules/_discussion.scss
@@ -245,6 +245,7 @@ $moderator-badge-color: #dd9900;
 .discussion-new-message-content {
   resize: none;
   min-height: 150px;
+  padding: 0;
   border-radius: 0;
   border-color: transparent;
   overflow: hidden;
