Add class on discussion pagination to avoid navbar conflict

--- a/app/views/layouts/_discussions.html.erb
+++ b/app/views/layouts/_discussions.html.erb
@@ -79,7 +79,7 @@
     </div>
 
     <div class="discussion-pagination">
-      <%= paginate @filtered_discussions %>
+      <%= paginate @filtered_discussions, nav_class: 'pagination' %>
     </div>
 
   <% end %>
