Fix collapse style on test results layout

--- a/app/views/layouts/_test_results.html.erb
+++ b/app/views/layouts/_test_results.html.erb
@@ -23,7 +23,7 @@
           </span>
         <% end %>
 
-        <div class="example-result collapse <%= 'in' if contextualization.visible_success_output? %>" id="example-result-<%= index %>">
+        <div class="example-result collapse <%= 'show' if contextualization.visible_success_output? %>" id="example-result-<%= index %>">
           <%= contextualization.test_result_html test_result %>
         </div>
       </li>
