Give proper sizing to breadcrumb images on mobile

--- a/app/assets/stylesheets/mumuki_laboratory/application/modules/_breadcrumb.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/modules/_breadcrumb.scss
@@ -61,4 +61,8 @@
   object-fit: contain;
   height: 38px;
   position: relative;
+
+  @include media-breakpoint-down(lg) {
+    max-width: 70vw;
+  }
 }
