--- a/app/views/notifications/_exam_authorization_request.html.erb
+++ b/app/views/notifications/_exam_authorization_request.html.erb
@@ -1,1 +1,1 @@
-<%= menu_item :book_open, :exam_authorization_request_updated, url_for(target), { description: target.exam_registration.description } %>
+<%= menu_item :book_open, :exam_authorization_request_updated, exam_authorizations_user_path, { description: target.exam_registration.description } %>
