--- a/app/views/users/exam_authorizations.html.erb
+++ b/app/views/users/exam_authorizations.html.erb
@@ -19,7 +19,7 @@
           <% @exam_authorization_requests.each_with_index do |it, index| %>
             <div class="accordion-item">
               <h2 class="accordion-header" id="<%= "exam_authorization_accordion_item_#{index}" %>">
-                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#<%= "exam_authorization_collapse_item_#{index}" %>" aria-expanded="true" aria-controls="<%= "exam_authorization_collapse_item_#{index}" %>">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#<%= "exam_authorization_collapse_item_#{index}" %>" aria-expanded="false" aria-controls="<%= "exam_authorization_collapse_item_#{index}" %>">
                   <span class="fa fa-fw fa-<%= it.icon[:class] %> text-<%= it.icon[:type] %>" data-bs-toggle="tooltip" title="<%= t(it.status).humanize %>"></span>
                   <span class="divider-vertical"></span>
                   <span><strong><%= it.exam_registration.description %></strong> - <small><%= l(it.exam.start_time, format: :long) %></small></span>
