Make kids speech navigation arrows bigger

--- a/app/views/layouts/_kids.html.erb
+++ b/app/views/layouts/_kids.html.erb
@@ -12,8 +12,8 @@
       </ul>
   <% end %>
   <div class="mu-kids-character-speech-bubble-normal">
-    <i class="mu-kids-prev-speech fas fa-fw fa-caret-up"></i>
-    <i class="mu-kids-next-speech fas fa-fw fa-caret-down"></i>
+    <i class="mu-kids-prev-speech fas fa-fw fa-lg fa-caret-up"></i>
+    <i class="mu-kids-next-speech fas fa-fw fa-lg fa-caret-down"></i>
     <div class="description"><%= exercise.description_task %></div>
     <div class="hint"><%= exercise.hint_html %></div>
   </div>
