--- a/app/views/exam_authorization_requests/_pending.html.erb
+++ b/app/views/exam_authorization_requests/_pending.html.erb
@@ -1,4 +1,5 @@
 <%= t :exam_authorization_pending_explanation_html,
-      date: l(authorization_request.exam.start_time.in_time_zone(-3), format: :long),
-      end_time: l(authorization_request.exam_registration.end_time.in_time_zone(-3), format: :long),
+      date: l(authorization_request.exam.start_time, format: :long),
+      end_time: l(authorization_request.exam_registration.end_time, format: :long),
+      location: Organization.current.time_zone,
       edit_path: url_for(authorization_request.exam_registration) %>
